fixes css layout
p tag sets now  a line break if word is too long for a div box.
changed input validators ip, mac max length to db maximum 15, 17.
device add box on microsoft edge browser is now displayed correctly.

--- a/src/styles.css
+++ b/src/styles.css
@@ -6,3 +6,7 @@ body {
 body{
     margin: 0;
 }
+
+p{
+    word-wrap:break-word;
+}
